syntax = "proto3";

package ridesharing.v1;

option go_package = "ms-ride-sharing/shared/proto/user;user";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";

service UserService {
  // CreateUser cria um novo usu치rio (rider ou driver)
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  // Login autentica um usu치rio
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/users/login"
      body: "*"
    };
  }

  // Logout desloga um usu치rio
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/users/logout"
      body: "*"
    };
  }

  // RefreshToken atualiza o token de um usu치rio
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/users/refresh-token"
      body: "*"
    };
  }
}

enum UserType {
  UNSPECIFIED = 0;
  RIDER       = 1;
  DRIVER      = 2;
}

message CreateUserRequest {
  string full_name = 1 [(validate.rules).string.min_len = 2];
  string email = 2 [(validate.rules).string.email = true];  
  string password = 3 [(validate.rules).string.min_len = 6];
  UserType user_type = 4 [(validate.rules).enum.defined_only = true];
}

message CreateUserResponse {
  string id = 1;
}

message LoginRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string.min_len = 1];
}

message LoginResponse {
  string   id            = 1;
  string   name          = 2;
  string   email         = 3;
  UserType type          = 4;
  string   access_token  = 5;
  string   refresh_token = 6;
}

message LogoutRequest {
  string user_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message LogoutResponse {
  bool success = 1;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string access_token  = 1;
  string refresh_token = 2;
}
